@@ -46,7 +46,7 @@ import sun.reflect.misc.ReflectUtil;
  * <p>
  * If the class can successfully be loaded, an attempt will
  * be made to create an instance of it by calling
- * <code>Class.newInstance</code>.  An attempt will be made
+ * <code>Class.getDeclaredConstructor().newInstance</code>.  An attempt will be made
  * to narrow the instance to type <code>java.awt.Component</code>
  * to display the object.
  * <p>
@@ -92,7 +92,7 @@ public class ObjectView extends ComponentView  {
             ReflectUtil.checkPackageAccess(classname);
             Class<?> c = Class.forName(classname, true,Thread.currentThread().
                                        getContextClassLoader());
-            Object o = c.newInstance();
+            Object o = c.getDeclaredConstructor().newInstance();
             if (o instanceof Component) {
                 Component comp = (Component) o;
                 setParameters(comp, attr);
